Fixed overflow

--- a/app/src/viewcontrols/howtoplay/howtoplay.vc.less
+++ b/app/src/viewcontrols/howtoplay/howtoplay.vc.less
@@ -248,6 +248,7 @@
     background-color: #f1f2f2;
     .container {
         padding: 1em;
+        overflow: hidden;
             h3 {
                 margin-left: .5em;
                 bottom: 0;
